--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <section class="hero-bg relative h-[600px] flex items-center justify-center text-center px-4">
         <div class="max-w-4xl mx-auto text-white z-10">
             <h1 class="font-heading text-4xl md:text-6xl font-extrabold mb-6 drop-shadow-lg leading-tight">
-                You Are Not Alone.
+                Mental Health Matters.
             </h1>
             <p class="text-lg md:text-xl mb-8 font-light max-w-2xl mx-auto drop-shadow-md text-gray-100">
                 We are NAMI On Campus - MSU. Dedicated to improving the lives of students affected by mental illness through support, education, and advocacy.
@@ -407,4 +407,5 @@
         });
     </script>
 </body>
+
 </html>
